--- a/app.json
+++ b/app.json
@@ -3,7 +3,8 @@
     "pages/index/index",
     "pages/healthRecords/healthRecords",
     "pages/product/product",
-    "pages/connectUs/connectUs"
+    "pages/connectUs/connectUs",
+    "pages/schedule/schedule"
   ],
   "window": {
     "backgroundTextStyle": "light",
