--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -4,12 +4,11 @@
     "pages/healthRecords/healthRecords",
     "pages/product/product",
     "pages/connectUs/connectUs",
-    "pages/schedule/schedule"
+    "pages/schedule/schedule",
+    "pages/login/login",
+    "pages/register/register"
   ],
   "permission": {
-    "scope.userInfo": {
-      "desc": "你的用户信息将用于完善会员资料"
-    }
   },
   "tabBar": {
     "custom": true,
@@ -35,19 +34,14 @@
       }
     ]
   },
-  "window": {
-    "navigationBarTextStyle": "black"
-  },
   "style": "v2",
+  "useExtendedLib": {
+    "weui": true
+  },
+  "renderer": "webview",
   "rendererOptions": {
     "skyline": {
-      "defaultDisplayBlock": true,
-      "disableABTest": true,
-      "sdkVersionBegin": "3.0.0",
-      "sdkVersionEnd": "15.255.255"
+      "defaultDisplayBlock": true
     }
-  },
-  "componentFramework": "glass-easel",
-  "sitemapLocation": "sitemap.json",
-  "lazyCodeLoading": "requiredComponents"
-}
+  }
+} 
