--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -6,7 +6,8 @@
     "pages/connectUs/connectUs",
     "pages/schedule/schedule",
     "pages/login/login",
-    "pages/register/register"
+    "pages/register/register",
+    "pages/productInfo/productInfo"
   ],
   "permission": {
   },
