--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -7,7 +7,8 @@
     "pages/schedule/schedule",
     "pages/login/login",
     "pages/register/register",
-    "pages/productInfo/productInfo"
+    "pages/productInfo/productInfo",
+    "pages/healthTips/healthTips"
   ],
   "permission": {
   },
