--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -8,7 +8,8 @@
     "pages/login/login",
     "pages/register/register",
     "pages/productInfo/productInfo",
-    "pages/healthTips/healthTips"
+    "pages/healthTips/healthTips",
+    "pages/report/report"
   ],
   "permission": {
   },
