--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -7,6 +7,7 @@
     "pages/schedule/schedule",
     "pages/productInfo/productInfo",
     "pages/healthTips/healthTips",
+    "pages/healthFile/healthFile",
     "pages/report/report"
   ],
   "permission": {
